# django-schedule

./: db.sqlite3  pyproject.toml
contacts/: admin.py  models.py  urls.py
contacts/migrations/: 0001_initial.py  0002_rename_created_data_contact_created_date.py
contacts/templates/contacts/: index.html
schedule/: settings.py  urls.py
templates/: base.html
templates/partials/: _head.html  _nav.html
