[tool.poetry]
name = "django-schedule"
version = "0.1.0"
description = "Schedule website."
authors = ["Marcus Cruz <marcus.v.s.c13@gmail.com>"]
readme = "README.md"
packages = [{include = "django_schedule"}]

[tool.poetry.dependencies]
django = "^4.1.3"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[toml.isort]
line_length = 88
black = "profile"
